Add intro text to report

--- a/reports/report_1.html
+++ b/reports/report_1.html
@@ -65,10 +65,13 @@
             <p class="download"><a href="?download=1">Download the Report</a></p>
             <p>During: <span>2020-09-29 09:16:28 - 2020-09-29 09:20:22</span></p>
             <p>Target Host: <span>http://ec2-54-161-239-252.compute-1.amazonaws.com</span></p>
+            <p>Maximum RPS: <span>3497</span></p>
+            <p>Maximum Users: <span>117,000</span></p>
+            <p>First failures: <span>3186.9 requests per second, 89,446 users</span></p>
         </div>
 
             <div class="charts-container">
-                <h2>Charts</h2>
+                <h2>Locust-Generated Charts</h2>
             </div>
             <div class="cpu chart">
                 <h2> CPU Usage </h2>
